Version history of the R genetic analysis package (R/gap)

Version 1.2.3
31-03-2021	Revise ESplot to use log(OR) as effect size, activate (...) option
22-03-2021	Add example for miamiplot in gap.Rnw
12-02-2021	Revise circos.cnvplot() excluding records with start>end
11-02-2021	Revise METAL_forestplot()
19-01-2021	Revise cs() to give the correct list of variants
10-01-2021	Revise ESplot() and therefore the vignette from Wendi's problem
20-10-2020	Add pvalue() to complement log10p()
05-08-2020	Fix issues in chr_pos_a1_a2() with vector input and suggest R/genetics
28-04-2020	Change colors for cis/trans signals in circos.cis.vs.trans.plot()
22-02-2020	Add bat data example for MCMCgrm on a query from Shengjing Song <songsj455@nenu.edu.cn>
		Merge d3json() to mhtplot3d(), drop the template, regress and suggest plotly
19-02-2020	Add details on N to METAL_forestplot.Rd due to query/flag of a typo
		from Savita Karthikeyan <sk752@medschl.cam.ac.uk>
09-02-2020	Revise return values for mhtplot2d as id,chr1,pos1,chr2,pos2,x,y,log10p,target,gene,col

Version 1.2.2
01-02-2020	Fix problem with inv_chr_pos_a1_a2(prefix=), return values from mhtplot2d
		Recompile R-devel with `CPPFLAGS="-D_FORTIFY_SOURCE=2 -fPIC" ./configure --enable-R-shlib'
		as informed by Kurt Hornik <Kurt.Hornik@R-project.org>
		and then add ignore.h for `R CMD check --as-cran`
17-12-2019	Add chr_pos_a1_a2()/inv_chr_pos_a1_a2()
11-12-2019	Add snptest_sample() to output in SNPTEST sample file format
05-11-2019	Add makeRLEplot() from Caprion pilot data and function setup by Jimmy Peters
13-10-2019	Revise METAL_forestplot() adding dplyr_rsid() due to queries from Cismaru, Anca <anca.cismaru@extern.insel.ch>
07-10-2019	Add mhtplot2d() for 2D Manhattan plot
02-09-2019	Fix numerical issues and log_p= option for cs()
24-08-2019	Reverse compatibility with R 3.3.1 by changing family to family_ in pfc.f
14-08-2019	Fix bug in sentinels subsetting, i.e., pos --> u[[pos]]
25-06-2019	Add cs and suggest matrixStats