@@ -13,14 +13,14 @@ export(AE3, ab, allele.recode, a2g, asplot,
    ESplot,
    fbsize, FPRP,
    g2a, g2a.c, gc.control, gc.em, gcode, gcontrol, gcontrol2, gc.lambda, gcp, genecounting, geno.recode, 
-        getPTE, getb1star, gif, grec2g, MCMCgrm,
+        getPTE, getb1star, gif, grec2g, gsmr, MCMCgrm,
    h2, h2G, h2GE, h2l, hap, hap.control, hap.em, hap.score, hmht.control, htr,
         h2.jags, hwe, hwe.cc, hwe.hardy, hwe.jags, HapDesign, HapFreqSE,
    inv_chr_pos_a1_a2, invlogit, invnormal,
    KCC, k, klem, kin.morgan,
    LD22, LDkl, lambda1000, logit, log10p, logp,
    METAL_forestplot, m2plem, makeRLEplot, makeped, masize, metap, metareg, mhtplot, mhtplot2, mhtplot2d, mhtplot3d, mhtplot.trunc, mht.control,
-        mia, miamiplot, micombine, mtdt, mtdt2, muvar, mvmeta,
+        mia, miamiplot, micombine, mr.boot, mtdt, mtdt2, muvar, mvmeta,
    PARn, pbsize, pbsize2, pedtodot, pfc, pfc.sim, pgc, plem2m, plot.hap.score, print.hap.score, pvalue,
    qqfun, qqunif,
    read.ms.output, revhap, revhap.i, ReadGRM, ReadGRMBin, ReadGRMPLINK, ReadGRMPCA,
@@ -28,7 +28,7 @@ export(AE3, ab, allele.recode, a2g, asplot,
    toETDT, tscc,
    ungcode,
    VR,
-   whscore, WriteGRM, WriteGRMBin, WriteGRMSAS,
+   weighted.median,whscore, WriteGRM, WriteGRMBin, WriteGRMSAS,
    x2,
    z)
 S3method(plot, hap.score)
